# teacherInvServer

./: CMakeLists.txt  main.cpp
cmake/: global_template.h.in  insert3rd.cmake  utils.cmake
common/: CMakeLists.txt
common/logger/: CMakeLists.txt
common/logger/include/logger/: export.h  logger.h
common/logger/private/logger/: countrotatingsink.hpp  id8generator.hpp  logger_p.cpp  logger_p.h
common/logger/src/: logger.cpp
common/simpledb/: CMakeLists.txt
common/simpledb/include/: FFSimpleDB
common/simpledb/include/simpledb/: export.h  simpledb.h
common/simpledb/src/: simpledb.cpp
common/yamltool/: CMakeLists.txt
common/yamltool/include/yamltool/: export.h  yamlnode.h  yamltool.h
common/yamltool/private/yamltool/: yamlnode_p.cpp  yamlnode_p.h  yamltool_p.cpp  yamltool_p.h
common/yamltool/src/: yamlnode.cpp  yamltool.cpp
server/: CMakeLists.txt  main.cpp
server/include/app/: serverapp.h
server/include/domain/: apierror.h  collection.h  exam.h  fieldmaps.h  proctoring.h  teacher.h
server/include/http/: httpjson.h  routes.h
server/include/infra/: migrations.h
server/include/repo/: collectionrepo.h  db.h  examrepo.h  proctoringrepo.h  reporesult.h  rootrepo.h  teacherrepo.h
server/include/server/character/: examinformation.hpp  invinformation.hpp  root.hpp  teacher.hpp
server/include/server/dbinit/: dbinit.h
server/include/server/login/: login.h
server/include/services/: authservice.h  teacherservice.h
server/include/util/: stringutil.h  timeutil.h
server/src/: startup.cpp
server/src/app/: serverapp.cpp
server/src/dbinit/: dbinit.cpp
server/src/http/: httpjson.cpp  routes.cpp
server/src/infra/: migrations.cpp
server/src/login/: login.cpp
server/src/repo/: collectionrepo.cpp  db.cpp  examrepo.cpp  proctoringrepo.cpp  rootrepo.cpp  teacharrepo.cpp
server/src/services/: authservice.cpp  teacherservice.cpp
server/src/util/: stringutil.cpp  timeutil.cpp
